k8s/netflix-clone-deployment.yaml
# k8s/netflix-clone-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-clone
  namespace: default # Assuming deployment in default namespace
  labels:
    app: netflix-clone
spec:
  replicas: 1 # Start with 1, can be scaled by Jenkins or kubectl
  selector:
    matchLabels:
      app: netflix-clone
  template:
    metadata:
      labels:
        app: netflix-clone
    spec:
      containers:
      - name: netflix-clone-app
        image: aayush786/netflix-clone:test-amd64 # YOUR DOCKER HUB IMAGE
        ports:
        - containerPort: 80 # Port Nginx listens on inside the container
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: netflix-clone-svc
  namespace: default # Assuming service in default namespace
  labels:
    app: netflix-clone
spec:
  selector:
    app: netflix-clone
  ports:
  - protocol: TCP
    port: 80       # Service's port within the cluster
    targetPort: 80 # Port on the pod/container
  type: ClusterIP   # Changed to ClusterIP, suitable for ALB with target-type: ip
                    # If you were using target-type: instance, NodePort would be needed.
